Broader cleanup and use of newer PGM utils